@@ -239,7 +239,7 @@ SC_MAKE_LIB
 #--------------------------------------------------------------------
 
 if test "${TEA_PLATFORM}" = "windows" ; then
-    SHLIB_LD_LIBS="${SHLIB_LD_LIBS} gdi32.lib"
+    LIBS="${LIBS} gdi32.lib user32.lib"
 fi
 
 #--------------------------------------------------------------------
