@@ -1,3 +1,9 @@
+2002-04-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* configure: regened
+	* configure.in: added user32.lib to LIBS for Windows
+	* tclconfig/tcl.m4: updated from TEA sample
+
 2002-03-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in (WISH_PROG): moved and updated env var definitions
